fix: table container should use overflow: auto instead of overflow-y: auto

--- a/live/style.css
+++ b/live/style.css
@@ -400,7 +400,7 @@ main {
 }
 
 .visualizations .content.scrollable {
-    overflow-y: auto;
+    overflow: auto;
     max-height: var(--viz-height);
 }
 
